Check it builds zlib on ubuntu as well.

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,4 @@ before_install: |
   git clone -b IB/v5-06/next https://github.com/alisw/alidist
 script: |
   time alibuild/aliBuild --aggressive-cleanup --docker -a slc7_x86-64 -d build zlib
+  time alibuild/aliBuild --aggressive-cleanup --docker -a ubuntu1510_x86-64 -d build zlib
