--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ cache:
   directories:
     - $HOME/sw/TARS
 before_install: |
-  sudo apt-get install -y curl
+  sudo apt-get install -y curl environment-modules
   cd ..
   git clone -b IB/v5-06/next https://github.com/alisw/alidist
 script: |
@@ -15,6 +15,9 @@ script: |
   time alibuild/aliBuild -z test-init init zlib
   pushd test-init/alidist && git status && popd
   pushd test-init/zlib && git status && popd
+  time alibuild/aliBuild build zlib --no-system --disable GCC-Toolchain
+  alibuild/alienv q
+  alibuild/alienv setenv zlib/latest -c bash -c '[[ ! -z $LD_LIBRARY_PATH ]]'
   time alibuild/aliBuild build zlib --dry-run
   time alibuild/aliBuild --aggressive-cleanup --docker -a slc7_x86-64 -d build zlib
   time alibuild/aliBuild --aggressive-cleanup --docker -a ubuntu1510_x86-64 -d build zlib
