Add Google Analytics (#283, #284, #285)

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,15 @@ before_install: |
   git clone -b IB/v5-06/next https://github.com/alisw/alidist
 script: |
   set -e
+  alibuild/aliBuild analytics off
+  test -e ~/.config/alibuild/disable-analytics
+  test ! -e ~/.config/alibuild/analytics-uuid
+  alibuild/aliBuild analytics on
+  test ! -e ~/.config/alibuild/disable-analytics
+  test -e ~/.config/alibuild/analytics-uuid
+  alibuild/aliBuild analytics off
+  test -e ~/.config/alibuild/disable-analytics
+  test -e ~/.config/alibuild/analytics-uuid
   time alibuild/aliBuild --help
   time alibuild/aliBuild -z test-init init zlib
   pushd test-init/alidist && git status && popd
