--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ script: |
   time alibuild/aliBuild build zlib --no-system --disable GCC-Toolchain
   alibuild/alienv q
   alibuild/alienv setenv zlib/latest -c bash -c '[[ ! -z $LD_LIBRARY_PATH ]]'
+  alibuild/aliBuild analytics off
   time alibuild/aliBuild build zlib --dry-run
   time alibuild/aliBuild --aggressive-cleanup --docker -a slc7_x86-64 -d build zlib
   time alibuild/aliBuild --aggressive-cleanup --docker -a ubuntu1510_x86-64 -d build zlib
