--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ script: |
   alibuild/alienv q
   alibuild/alienv setenv zlib/latest -c bash -c '[[ ! -z $LD_LIBRARY_PATH ]]'
   alibuild/aliBuild analytics off
+  ls -la ~/.config/alibuild
   time alibuild/aliBuild build zlib --dry-run
   time alibuild/aliBuild --aggressive-cleanup --docker -a slc7_x86-64 -d build zlib
   time alibuild/aliBuild --aggressive-cleanup --docker -a ubuntu1510_x86-64 -d build zlib
