--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ script: |
   pushd test-init/zlib && git status && popd
   time alibuild/aliBuild build zlib --no-system --disable GCC-Toolchain
   alibuild/alienv q
-  alibuild/alienv setenv zlib/latest -c bash -c '[[ ! -z $LD_LIBRARY_PATH ]]'
+  alibuild/alienv setenv zlib/latest -c bash -c '[[ $LD_LIBRARY_PATH == */zlib/* ]]'
   time alibuild/aliBuild build zlib --dry-run
   time alibuild/aliBuild --aggressive-cleanup --docker -a slc7_x86-64 -d build zlib
   time alibuild/aliBuild --aggressive-cleanup --docker -a ubuntu1510_x86-64 -d build zlib
