--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ before_install: |
   cd ..
   git clone -b IB/v5-06/next https://github.com/alisw/alidist
 install: |
+    pip install --user pyyaml
     pip install --user codecov
     pip install --user coverage
 script: |
