--- a/.travis.yml
+++ b/.travis.yml
@@ -9,24 +9,31 @@ before_install: |
   sudo apt-get install -y curl environment-modules
   cd ..
   git clone -b IB/v5-06/next https://github.com/alisw/alidist
+install: |
+    pip install --user codecov
+    pip install --user coverage
 script: |
   set -e
-  alibuild/aliBuild analytics off
+  export PATH=~/.local/bin:$PATH
+  export PYTHONPATH=~/lib/python2.7/site-packages:$PYTHONPATH
+  coverage run alibuild/aliBuild analytics off
   test -e ~/.config/alibuild/disable-analytics
   test ! -e ~/.config/alibuild/analytics-uuid
-  alibuild/aliBuild analytics on
+  coverage run alibuild/aliBuild analytics on
   test ! -e ~/.config/alibuild/disable-analytics
   test -e ~/.config/alibuild/analytics-uuid
-  alibuild/aliBuild analytics off
+  coverage run alibuild/aliBuild analytics off
   test -e ~/.config/alibuild/disable-analytics
   test -e ~/.config/alibuild/analytics-uuid
-  time alibuild/aliBuild --help
-  time alibuild/aliBuild -z test-init init zlib
+  time coverage run alibuild/aliBuild --help
+  time coverage run alibuild/aliBuild -z test-init init zlib
   pushd test-init/alidist && git status && popd
   pushd test-init/zlib && git status && popd
-  time alibuild/aliBuild build zlib --no-system --disable GCC-Toolchain
+  time coverage run alibuild/aliBuild build zlib --no-system --disable GCC-Toolchain
   alibuild/alienv q
   alibuild/alienv setenv zlib/latest -c bash -c '[[ $LD_LIBRARY_PATH == */zlib/* ]]'
-  time alibuild/aliBuild build zlib --dry-run
-  time alibuild/aliBuild --aggressive-cleanup --docker -a slc7_x86-64 -d build zlib
-  time alibuild/aliBuild --aggressive-cleanup --docker -a ubuntu1510_x86-64 -d build zlib
+  time coverage run alibuild/aliBuild build zlib --dry-run
+  time coverage run alibuild/aliBuild --aggressive-cleanup --docker -a slc7_x86-64 -d build zlib
+  time coverage run alibuild/aliBuild --aggressive-cleanup --docker -a ubuntu1510_x86-64 -d build zlib
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
