--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,7 @@ script: |
   time coverage run alibuild/aliBuild build zlib --no-system --disable GCC-Toolchain
   alibuild/alienv q
   alibuild/alienv setenv zlib/latest -c bash -c '[[ $LD_LIBRARY_PATH == */zlib/* ]]'
+  coverage run alibuild/aliDoctor AliPhysics
   time coverage run alibuild/aliBuild build zlib --dry-run
   time coverage run alibuild/aliBuild --aggressive-cleanup --docker -a slc7_x86-64 -d build zlib
   time coverage run alibuild/aliBuild --aggressive-cleanup --docker -a ubuntu1510_x86-64 -d build zlib
