--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 sudo: required
 dist: trusty
+language: python
 python:
-  - "2.6"
   - "2.7"
   - "3.5"
 services:
@@ -14,13 +14,17 @@ before_install: |
   cd ..
   git clone -b IB/v5-06/next https://github.com/alisw/alidist
 install: |
-    pip install --user pyyaml
-    pip install --user codecov
-    pip install --user coverage
+    pip install pyyaml
+    pip install codecov
+    pip install coverage
+    pip install mock
+    pip install pyflakes
 script: |
   set -e
   export PATH=~/.local/bin:$PATH
   export PYTHONPATH=~/lib/python2.7/site-packages:$PYTHONPATH
+  coverage run -a alibuild/aliBuild analytics off
+  time coverage run -a alibuild/aliBuild --help
   coverage run -a alibuild/aliBuild analytics off
   test -e ~/.config/alibuild/disable-analytics
   test ! -e ~/.config/alibuild/analytics-uuid
@@ -30,7 +34,7 @@ script: |
   coverage run -a alibuild/aliBuild analytics off
   test -e ~/.config/alibuild/disable-analytics
   test -e ~/.config/alibuild/analytics-uuid
-  time coverage run -a alibuild/aliBuild --help
+  pushd alibuild; time coverage run -a -m unittest discover tests; popd
   time coverage run -a alibuild/aliBuild -z test-init init zlib
   pushd test-init/alidist && git status && popd
   pushd test-init/zlib && git status && popd
@@ -41,8 +45,6 @@ script: |
   time coverage run -a alibuild/aliBuild -c alibuild/tests/testdist build broken4 --no-system --disable GCC-Toolchain 2>&1 | grep "Malformed header"
   time coverage run -a alibuild/aliBuild -c alibuild/tests/testdist build broken5 --no-system --disable GCC-Toolchain 2>&1 | grep "Missing package"
   time coverage run -a alibuild/aliBuild -c alibuild/tests/testdist build broken6 --no-system --disable GCC-Toolchain 2>&1 | grep scanning
-  PYTHONPATH=alibuild time coverage run -a alibuild/tests/test_parseRecipe.py
-  PYTHONPATH=alibuild time coverage run -a alibuild/tests/test_utilities.py
   time coverage run -a alibuild/aliBuild build zlib --no-system --disable GCC-Toolchain
   alibuild/alienv q
   alibuild/alienv setenv zlib/latest -c bash -c '[[ $LD_LIBRARY_PATH == */zlib/* ]]'
@@ -51,5 +53,6 @@ script: |
   time coverage run -a alibuild/aliBuild --aggressive-cleanup --docker -a slc7_x86-64 -d build zlib
   time coverage run -a alibuild/aliBuild --aggressive-cleanup --docker -a ubuntu1510_x86-64 -d build zlib
   time coverage run -a alibuild/aliBuild init zlib
+  time coverage run -a alibuild/aliBuild version
 after_success:
   - bash <(curl -s https://codecov.io/bash)
