--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -23,8 +23,8 @@ menu:
     name: o2-tutorial.html
     label: TUTORIAL (O2)
   -
-    name: o2-daq-tutorial.html
-    label: TUTORIAL (O2 DAQ)
+    name: o2-dataflow-tutorial.html
+    label: TUTORIAL (O2 dataflow)
 defaults:
   -
     scope:
