Point to the external aliBuild ALICE tutorial
* Old pages have been maintained: they redirect to the external site
* There is only one tutorial link pointing to the external documentation
* Tutorial from the external documentation is now compatible with the removed
  dataflow tutorial as agreed with @vascobarroso
* Added in the external documentation proper instructions to use several
  defaults at the same time with `aliBuild` and `alienv`

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -2,7 +2,8 @@ highlighter: rouge
 baseurl: /alibuild
 menu_header: ALIBUILD
 menu:
-  - name: quick.html
+  -
+    name: quick.html
     label: QUICKSTART
   -
     name: user.html
@@ -17,14 +18,8 @@ menu:
     name: troubleshooting.html
     label: TROUBLESHOOTING
   -
-    name: tutorial.html
-    label: TUTORIAL (AliPhysics)
-  -
-    name: o2-tutorial.html
-    label: TUTORIAL (O2)
-  -
-    name: o2-dataflow-tutorial.html
-    label: TUTORIAL (O2 dataflow)
+    name: https://alice-doc.github.io/alice-analysis-tutorial/building/
+    label: ALICE TUTORIAL
 defaults:
   -
     scope:
