Add pylint to Travis tests
Current configuration is the minimal one to have everything green
we should little by little make sure we enable the tests as it
makes sense and as we find the time to actually fix them.

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ install: |
     pip install coverage
     pip install mock
     pip install pyflakes
+    pip install pylint
     gem install jekyll html-proofer
 script: |
   alibuild/script/cibuild
