--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ install: |
     pip install pylint
     gem install jekyll html-proofer
     pip install twine
+    pip install requests
 script: |
   alibuild/script/cibuild
 after_success:
