--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,5 +24,6 @@ jobs:
         if: startsWith(github.ref, 'refs/tags')
         uses: pypa/gh-action-pypi-publish@master
         with:
+          user: __token__
           password: ${{ secrets.pypi_password }}
 
