--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,3 +20,9 @@ jobs:
       - name: Build the python distribution
         run: >-
           python setup.py sdist
+      - name: Publish distribution 📦 to PyPI
+        if: startsWith(github.ref, 'refs/tags')
+        uses: pypa/gh-action-pypi-publish@master
+        with:
+          password: ${{ secrets.pypi_password }}
+
