--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -11,11 +11,13 @@ on:
 
 jobs:
   build:
-
+    name: Build on ${{ matrix.python-version }} / ${{matrix.container }}
     runs-on: ubuntu-latest
+    container: ${{ matrix.container }}
     strategy:
       matrix:
         python-version: [2.7, 3.5, 3.6, 3.7, 3.8]
+        container: ['alisw/slc7-builder:latest']
 
     steps:
     - uses: actions/checkout@v2
