--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       matrix:
         python-version: [2.7, 3.5, 3.6, 3.7, 3.8]
-        container: ['alisw/slc7-builder:latest']
+        container: ['centos:7']
 
     steps:
     - uses: actions/checkout@v2
