Store version in alibuild_helpers instead of setup.py
Currently, recent Python 3 versions will throw a ResourceWarning from
pkg_resources when getting the installed version number in unit tests.
This patch fixes that.

Storing the version number internally also means we don't need a fallback in
case alibuild isn't installed with pip.

The version number is still only stored once. setup.py simply gets it from the
same place as the aliBuild script.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,7 +16,7 @@ jobs:
         run: >-
           GITHUB_TAG=`echo $GITHUB_REF | cut -f3 -d/` ;
           echo $GITHUB_TAG ;
-          perl -p -i -e "s/LAST_TAG/$GITHUB_TAG/g" setup.py
+          perl -p -i -e "s/LAST_TAG/$GITHUB_TAG/g" alibuild_helpers/__init__.py
       - name: Build the python distribution
         run: >-
           python setup.py sdist
