--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
 requests
 pyyaml
 distro
+boto3; python_version >= '3.6'
+futures; python_version == '2.7'
+futures; python_version == '2.6'
+argparse; python_version == '2.6'
+ordereddict; python_version == '2.6'
