--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,8 +36,8 @@ jobs:
           set -x
           cd "$(dirname "$(brew formula alibuild)")"
           json=$(curl -fSsL "https://pypi.org/pypi/alibuild/${GITHUB_REF#refs/tags/}/json")
-          sha=$(echo "$json" | jq -r '.urls[0].digests.sha256)
-          url=$(echo "$json" | jq -r '.urls[0].url)
+          sha=$(echo "$json" | jq -r '.urls[0].digests.sha256')
+          url=$(echo "$json" | jq -r '.urls[0].url')
           # Replace keys with two leading spaces only, so we get the toplevel
           # ones applying to alibuild, not those for dependencies.
           sed -i.bak "
