Install pipgrip for brew update-python-resources

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,6 +29,8 @@ jobs:
     runs-on: macos-latest
     if: startsWith(github.ref, 'refs/tags/') && !github.event.release.prerelease
     steps:
+      - name: Install prerequisites
+        run: brew install pipgrip
       - name: Checkout Homebrew repo
         run: brew tap alisw/system-deps
       - name: Update alibuild formula with new version
