Set username for release workflow
This makes commits in alisw/homebrew-system-deps show up as authored by
alibuild.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -53,6 +53,8 @@ jobs:
         run: |
           set -x
           cd "$(dirname "$(brew formula alibuild)")"
+          git config user.name alibuild
+          git config user.email 'alibuild@cern.ch'
           git add alibuild.rb
           git commit -m "Update alibuild to ${GITHUB_REF#refs/tags/}"
           git show
