Add a templating plugin
This allows access to the program state just before the build would start,
exposed to a user-provided Jinja2 template.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 requests
 pyyaml
 distro
+jinja2
 boto3; python_version >= '3.6'
 futures; python_version == '2.7'
 futures; python_version == '2.6'
