Remove deprecated and invalid pylint checks

--- a/.pylintrc
+++ b/.pylintrc
@@ -14,14 +14,8 @@ variable-naming-style=camelCase
 max-attributes=15
 
 [MESSAGES CONTROL]
-disable-checker=wrong-hanging-indentation,
-                invalid-name,
-                indent-after-paren,
-                bad-continuation,
-                import-outside-toplevel,
-                no-else-break,
-disable=bad-continuation,
-        bad-whitespace,
+disable=invalid-name,
+        import-outside-toplevel,
         import-error,
         ungrouped-imports,
         missing-docstring,
@@ -40,27 +34,24 @@ disable=bad-continuation,
         fixme,
         redefined-builtin,
         consider-using-ternary,
+        no-else-break,
         no-else-return,
         superfluous-parens,
         too-many-arguments,
-        old-style-class,
         bad-indentation,
         wrong-import-order,
         unused-import,
         logging-not-lazy,
         anomalous-backslash-in-string,
-        no-self-use,
         trailing-newlines,
         expression-not-assigned,
         pointless-statement,
         inconsistent-return-statements,
         attribute-defined-outside-init,
         broad-except,
-        deprecated-lambda,
         duplicate-code,
         len-as-condition,
         multiple-statements,
-        no-init,
         no-value-for-parameter,
         protected-access,
         redefined-outer-name,
@@ -82,4 +73,5 @@ disable=bad-continuation,
         invalid-envvar-default,
         import-outside-toplevel,
         no-else-break,
+        redundant-u-string-prefix,
         consider-using-f-string,
