Run tox in sequential mode
We're only running one tox job per workflow anyway (except for linting).

--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -43,7 +43,7 @@ jobs:
           python -m pip install --upgrade tox tox-gh-actions coverage
 
       - name: Run tests
-        run: tox -p
+        run: tox
 
       - name: Upload coverage information
         if: ${{ always() && github.event.repository.owner.name == 'alisw' }}
