--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -51,6 +51,24 @@ jobs:
           coverage combine .tox/coverage.*
           bash <(curl -s https://codecov.io/bash)
 
+  lint:
+    name: lint
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.x
+
+      - name: Install dependencies
+        run: python -m pip install --upgrade tox tox-gh-actions
+
+      - name: Run linters
+        run: tox -e lint
+
   documentation:
     name: documentation
     runs-on: ubuntu-latest
