--- a/tox.ini
+++ b/tox.ini
@@ -3,13 +3,14 @@ minversion = 3.20
 envlist = lint, py{27, 36, 37, 38, 39, 310}
 
 [gh-actions]
+# The "lint" job is run separately.
 python =
     2.7: py27
     3.6: py36
     3.7: py37
     3.8: py38
     3.9: py39
-    3.10: py310, lint
+    3.10: py310
 
 [testenv:lint]
 # Warning: This environment inherits settings from the main [testenv] section.
