--- a/tox.ini
+++ b/tox.ini
@@ -27,9 +27,9 @@ commands =
     flake8 . --config {toxinidir}/.flake8 --count --select=E9,F63,F7,F82 --show-source --statistics
     # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
     flake8 . --config {toxinidir}/.flake8 --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    find . -name .git -prune -false -o -name .tox -prune -false -o -iname '*.py' \
-         -exec pylint -j 0 --rcfile {toxinidir}/.pylintrc \{\} +
-    pylint -j 0 --rcfile .pylintrc aliBuild aliDeps aliDoctor pb
+    #find . -name .git -prune -false -o -name .tox -prune -false -o -iname '*.py' \
+    #     -exec pylint -j 0 --rcfile {toxinidir}/.pylintrc \{\} +
+    #pylint -j 0 --rcfile .pylintrc aliBuild aliDeps aliDoctor pb
 
 [testenv]
 description = run test suite under {envname}
