Re-add testdist checks
Not sure whether they're really needed, as some unit tests cover similar ground.

--- a/tox.ini
+++ b/tox.ini
@@ -35,6 +35,7 @@ commands =
 description = run test suite under {envname}
 # Commands we can call that aren't installed in the tox virtualenv.
 allowlist_externals =
+    sh
     git
     test
 deps =
@@ -80,6 +81,17 @@ commands =
     # This command is expected to fail, but run it for the coverage anyway.
     # A leading "-" means tox ignores the exit code.
     - coverage run -a {envbindir}/aliBuild build non-existing -a slc7_x86-64 --no-system --disable GCC-Toolchain
+
+    # TODO: do we need these? This seems to be at least partially covered by
+    # unit tests in tests/tests_parseRecipe.py.
+    sh -c 'coverage run -a {envbindir}/aliBuild -c {toxinidir}/tests/testdist build broken1 --force-unknown-architecture --no-system --disable GCC-Toolchain 2>&1 | tee /dev/stderr | grep "Header missing"'
+    sh -c 'coverage run -a {envbindir}/aliBuild -c {toxinidir}/tests/testdist build broken2 --force-unknown-architecture --no-system --disable GCC-Toolchain 2>&1 | tee /dev/stderr | grep "Empty recipe"'
+    sh -c 'coverage run -a {envbindir}/aliBuild -c {toxinidir}/tests/testdist build broken3 --force-unknown-architecture --no-system --disable GCC-Toolchain 2>&1 | tee /dev/stderr | grep "Unable to parse"'
+    sh -c 'coverage run -a {envbindir}/aliBuild -c {toxinidir}/tests/testdist build broken4 --force-unknown-architecture --no-system --disable GCC-Toolchain 2>&1 | tee /dev/stderr | grep "Malformed header"'
+    sh -c 'coverage run -a {envbindir}/aliBuild -c {toxinidir}/tests/testdist build broken5 --force-unknown-architecture --no-system --disable GCC-Toolchain 2>&1 | tee /dev/stderr | grep "Missing package"'
+    sh -c 'coverage run -a {envbindir}/aliBuild -c {toxinidir}/tests/testdist build broken6 --force-unknown-architecture --no-system --disable GCC-Toolchain 2>&1 | tee /dev/stderr | grep "while scanning a quoted scalar"'
+    sh -c 'coverage run -a {envbindir}/aliBuild -c {toxinidir}/tests/testdist build broken7 --force-unknown-architecture --no-system --disable GCC-Toolchain 2>&1 | tee /dev/stderr | grep "Malformed entry prefer_system"'
+
     coverage run -a {envbindir}/aliBuild build zlib -a slc7_x86-64 --no-system --disable GCC-Toolchain
     alienv -a slc7_x86-64 q
     alienv -a slc7_x86-64 setenv zlib/latest -c bash -c '[[ $LD_LIBRARY_PATH == */zlib/* ]]'
