Use codecov GitHub Action instead of deprecated bash script
The CodeCov bash uploader has apparently been deprecated for a long time and
seems to have stopped working. Use the supported GH Action instead.

Also, remove the leftover, now-unsupported "codecov" Python package, as we don't
need or use it.

--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -47,9 +47,9 @@ jobs:
 
       - name: Upload coverage information
         if: ${{ always() && github.event.repository.owner.login == 'alisw' }}
-        run: |
-          coverage combine .tox/coverage.*
-          bash <(curl -s https://codecov.io/bash)
+        uses: codecov/codecov-action@v3
+        with:
+          directory: .tox
 
   lint:
     name: lint
