--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 minversion = 3.20
-envlist = lint, py{27, 36, 37, 38, 39, 310}
+envlist = lint, py{27, 36, 37, 38, 39, 310, 311}
 
 [gh-actions]
 # The "lint" job is run separately.
@@ -11,6 +11,7 @@ python =
     3.8: py38
     3.9: py39
     3.10: py310
+    3.11: py311
 
 [testenv:lint]
 # Warning: This environment inherits settings from the main [testenv] section.
